--- a/keenclone/templates/nav/navbar.html
+++ b/keenclone/templates/nav/navbar.html
@@ -1,42 +1,61 @@
 {% load i18n account %}
 {% load cart_template_tags %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-md">
+<header id="navToggle" class="bg-gray-800 md:flex md:justify-between md:items-center md:px-2 md:py-2">
 
+  <div  class="flex items-center px-2 py-2 justify-between  md:p-0">
 
-    <a class="navbar-brand" href="#">
+    <a class="p-2 font-bold text-gray-400 hover:text-white focus:text-white" href="{% url 'home' %}">
         {% if user.is_authenticated %}
         {{ user.email }}
+        {% else %}
+        NoName
         {% endif %}
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-      <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'admin:index' %}">Admin</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'cart:item-list' %}">Cart</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'specialty:specialty-list' %}">Especialidades</a></li>
-        {% if user.is_authenticated %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'profile:my-profile' pk=user.pk %}">Mi Cuenta</a></li> {% endcomment %}
-        {% else %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Sign In</a></li>
-        <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
-        {% endif %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'profile:profile-list' %}">Profile List</a></li>
-        
-      </ul>
-      <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-      <li class="nav-item"><a class="nav-link" href="{% url 'cart:order-summary' %}">N° Items: {{ request.user|cart_item_count }}</a></li>
-      </ul>
-
+    
+    <div class="md:hidden">
+      <button @click="isOpen = !isOpen" type="button" class="text-gray-400 hover:text-white focus:text-white ">
+        <svg class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor" className="menu w-6 h-6">
+          <path v-if="!isOpen" fillRule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clipRule="evenodd" />
+          <path v-if="isOpen" fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd">
+        </svg>
+      </button>
     </div>
-
   </div>
-</nav>
+
+  <div id="navss" :class="isOpen ? 'block' : 'hidden'" class="px-2 pt-2 md:flex md:p-2">
+    <a class="block md:inline-block font-semibold px-2 md:mr-2 py-2 mb-1 text-gray-400 hover:text-white hover:bg-gray-700 rounded focus:text-white" href="{% url 'admin:index' %}">Admin</a>
+    <a class="block md:inline-block font-semibold px-2 md:mr-2 py-2 mb-1 text-gray-400 hover:text-white hover:bg-gray-700 rounded focus:text-white" href="{% url 'specialty:specialty-list' %}">Especialidades</a>
+    {% if user.is_authenticated %}
+    <a class="block md:inline-block font-semibold px-2 md:mr-2 py-2 mb-1 text-gray-400 hover:text-white hover:bg-gray-700 rounded focus:text-white" href="{% url 'account_email' %}">Change E-mail</a>
+    <a class="block md:inline-block font-semibold px-2 md:mr-2 py-2 mb-1 text-gray-400 hover:text-white hover:bg-gray-700 rounded focus:text-white" href="{% url 'account_logout' %}">Sign Out</a>
+    {% else %}
+    <a class="block md:inline-block font-semibold px-2 md:mr-2 py-2 mb-1 text-gray-400 hover:text-white hover:bg-gray-700 rounded focus:text-white" href="{% url 'account_login' %}">Sign In</a>
+    <a class="block md:inline-block font-semibold px-2 md:mr-2 py-2 mb-1 text-gray-400 hover:text-white hover:bg-gray-700 rounded focus:text-white" href="{% url 'account_signup' %}">Sign Up</a>
+    {% endif %}
+    <a class="block md:inline-block font-semibold px-2 md:mr-2 py-2 mb-1 text-gray-400 hover:text-white hover:bg-gray-700 rounded focus:text-white" href="{% url 'profile:profile-list' %}">Profile List</a>
+
+    <a href="{% url 'cart:order-summary' %}">
+      <button class="bg-gray-700 hover:bg-gray-600 hover:text-white text-gray-400 font-bold px-2 py-2 mb-2 rounded inline-flex items-center">
+        <svg class="fill-current w-6 h-6 mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+          <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+        </svg>
+        <span>{% if request.user|cart_item_count %}{{ request.user|cart_item_count }}{% endif %}</span>
+      </button>
+    </a>
+  </div>
+
+</header>
+
+<script type='text/javascript'>
+var nav = new Vue({
+  delimiters: ['[[', ']]'],
+  el: '#navToggle',
+  data: {
+    message: 'Hello ronald!',
+    isOpen: false,
+  },
+});
+</script>
+
+
